modernize feature checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.12...3.21)  # for CXX_STANDARD 20
+cmake_minimum_required(VERSION 3.19...3.21)
 
 project(CXX20examples
-LANGUAGES C CXX)  # C is used in filesystem examples
+  LANGUAGES C CXX)  # C is used in filesystem examples
 
 enable_testing()
 
