--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,18 @@
-cmake_minimum_required(VERSION 3.19...3.21)
+cmake_minimum_required(VERSION 3.21)
 
 project(CXX20examples
   LANGUAGES C CXX)  # C is used in filesystem examples
 
 enable_testing()
 
-if(CMAKE_CXX_COMPILER_ID STREQUAL IntelLLVM AND CMAKE_VERSION VERSION_LESS 3.21.0)
-  message(STATUS "Note: CMake has a bug with IntelLLVM icx where -std=c++* is not added.
-  This makes this project not work well with IntelLLVM yet.")
-endif()
 
 # C++20 modules, if compiler is capable
-if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.21)
-  try_compile(mod_ok
-    ${CMAKE_CURRENT_BINARY_DIR}/try_mod
-    ${CMAKE_CURRENT_SOURCE_DIR}/modules
-    Cxx20Modules)
-  if(mod_ok)
-    add_subdirectory(modules)
-  endif()
+try_compile(mod_ok
+  ${CMAKE_CURRENT_BINARY_DIR}/try_mod
+  ${CMAKE_CURRENT_SOURCE_DIR}/modules
+  Cxx20Modules)
+if(mod_ok)
+  add_subdirectory(modules)
 endif()
 
 # --- C++17 folding ---
