--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.21...3.22)
 
 project(CXX20examples
   LANGUAGES C CXX)  # C is used in filesystem examples
