set_property. only test modules once

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.21...3.23)
+cmake_minimum_required(VERSION 3.21...3.25)
 
 project(CXX20examples
 LANGUAGES C CXX
@@ -16,18 +16,25 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 
 # --- C++20 modules
-try_compile(HAVE_CXX20_MODULES
-${CMAKE_CURRENT_BINARY_DIR}/try_mod
-${CMAKE_CURRENT_SOURCE_DIR}/modules
-dummy
-OUTPUT_VARIABLE build_result
-)
+if(NOT DEFINED HAVE_CXX20_MODULES)
+  message(CHECK_START "Checking for C++20 modules...")
+  try_compile(HAVE_CXX20_MODULES
+  ${CMAKE_CURRENT_BINARY_DIR}/try_mod
+  SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/modules/main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/modules/math.ixx
+  CXX_STANDARD 20
+  CXX_STANDARD_REQUIRED true
+  OUTPUT_VARIABLE build_result
+  )
+  if(HAVE_CXX20_MODULES)
+    message(CHECK_PASS "found.")
+  else()
+    message(CHECK_FAIL "not supported.")
+    message(VERBOSE "${build_result}")
+  endif()
+endif()
 
 if(HAVE_CXX20_MODULES)
   add_subdirectory(modules)
-else()
-  message(STATUS "C++ 20 modules not available with ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
-  message(VERBOSE "${build_result}")
 endif()
 
 # --- C++ numbers
@@ -36,12 +43,12 @@ check_include_file_cxx(numbers HAVE_CXX20_NUMBERS)
 if(HAVE_CXX20_NUMBERS)
   add_executable(numbers src/numbers.cpp)
   add_test(NAME Numbers COMMAND numbers)
-  set_tests_properties(Numbers PROPERTIES LABELS 20)
+  set_property(TEST Numbers PROPERTY LABELS 20)
 endif()
 # --- C++ folding ---
 add_executable(folding src/folding.cpp)
 add_test(NAME Folding COMMAND folding)
-set_tests_properties(Folding PROPERTIES LABELS 17)
+set_property(TEST Folding PROPERTY LABELS 17)
 
 # --- C++ filesystem ---
 check_cxx_symbol_exists(__cpp_lib_filesystem filesystem HAVE_CXX17_FILESYSTEM)
@@ -73,5 +80,5 @@ HAS_CXX_THREAD
 if(HAS_CXX_THREAD)
   add_executable(thread_count src/thread_count.cpp)
   add_test(NAME Thread COMMAND thread_count)
-  set_tests_properties(Thread PROPERTIES LABELS 14)
+  set_property(TEST Thread PROPERTY LABELS 14)
 endif()
