visual studio stdlib import: need specific installer option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,10 @@
 cmake_minimum_required(VERSION 3.21...3.25)
 
 project(CXX20examples
-LANGUAGES C CXX
+LANGUAGES CXX
 )
 
 enable_testing()
-
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED true)
 
 include(cmake/compilers.cmake)
 
@@ -34,7 +31,7 @@ if(HAVE_CXX20_COROUTINE)
   add_executable(coro src/coroutine.cpp)
 endif()
 
-if(HAS_CXX_THREAD)
+if(HAVE_CXX_THREAD)
   add_executable(thread_count src/thread_count.cpp)
   add_test(NAME Thread COMMAND thread_count)
   set_property(TEST Thread PROPERTY LABELS 14)
