--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,16 @@ add_executable(folding src/folding.cpp)
 add_test(NAME Folding COMMAND folding)
 set_property(TEST Folding PROPERTY LABELS 17)
 
+if(HAVE_PRINT)
+  add_executable(print src/print.cpp)
+  add_test(NAME Print COMMAND print)
+  set_property(TEST Print PROPERTY LABELS 23)
+endif()
+
 if(HAVE_STDFLOAT)
   add_executable(stdfloat src/stdfloat.cpp)
+  add_test(NAME stdfloat COMMAND stdfloat)
+  set_property(TEST Print PROPERTY LABELS 23)
 endif()
 
 if(FEATURE_CXX17_FILESYSTEM)
