--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25...3.26)
 
-project(CXX23examples
+project(Cpp23examples
 LANGUAGES CXX
 )
 
@@ -23,6 +23,15 @@ add_executable(folding src/folding.cpp)
 add_test(NAME Folding COMMAND folding)
 set_property(TEST Folding PROPERTY LABELS 17)
 
+# --- C++ 23 ---
+
+if(HAVE_EXPECTED)
+  add_executable(expected src/expected.cpp)
+  add_test(NAME expected COMMAND expected)
+  set_property(TEST expected PROPERTY LABELS 23)
+  set_property(TEST expected PROPERTY PASS_REGULAR_EXPRESSION "42")
+endif()
+
 if(HAVE_PRINT)
   add_executable(print src/print.cpp)
   add_test(NAME Print COMMAND print)
@@ -35,13 +44,19 @@ if(HAVE_STDFLOAT)
   set_property(TEST Print PROPERTY LABELS 23)
 endif()
 
+# --- filesystem
+
 if(FEATURE_CXX17_FILESYSTEM)
   add_subdirectory(filesystem)
 endif()
 
+# --- coroutine
+
 if(HAVE_CXX20_COROUTINE)
   add_executable(coro src/coroutine.cpp)
 endif()
+
+# --- thread
 
 if(HAVE_CXX_THREAD)
   add_executable(thread_count src/thread_count.cpp)
